--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.368.0",
     "moment": "^2.30.1",
-    "next": "latest",
+    "next": "^14.2.3",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
