--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -21,6 +22,7 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "geist": "^1.2.1",
     "lodash": "^4.17.21",
@@ -29,6 +31,7 @@
     "next": "^14.2.3",
     "postcss": "8.4.33",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "recharts": "^2.12.5",
     "tailwind-merge": "^2.2.2",
